Added compatibility with UE5.1

--- a/CubemapExport.uplugin
+++ b/CubemapExport.uplugin
@@ -18,12 +18,18 @@
 		{
 			"Name": "CubemapExport",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"PlatformAllowList": [
+				"Win64"
+			]
 		},
 		{
 			"Name": "CubemapExportEditor",
 			"Type": "Editor",
-			"LoadingPhase": "PostEngineInit"
+			"LoadingPhase": "PostEngineInit",
+			"PlatformAllowList": [
+				"Win64"
+			]
 		}
 	]
 }
