--- a/CubemapExport.uplugin
+++ b/CubemapExport.uplugin
@@ -8,7 +8,7 @@
 	"CreatedBy": "Lukerrr",
 	"CreatedByURL": "https://www.youtube.com/channel/UCoij0DByuzJI3fieJl4FL9A",
 	"DocsURL": "https://github.com/Lukerrr/ue-cubemap-export",
-	"MarketplaceURL": "",
+	"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/product/ba28748d95974292adf87cb0591bb61b",
 	"SupportURL": "mailto:thelukerrr@gmail.com?subject=CubemapExport%20plugin%20support",
 	"CanContainContent": false,
 	"IsBetaVersion": false,
